--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Urbanist', sans-serif;
-    /* color: rgb(252, 220, 160); */
+    /* background-color: rgb(228, 246, 253); */
+    /* color: rgb(83, 134, 134); */
 }
