written css for register page

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
     font-family: 'Urbanist', sans-serif;
     /* background-color: rgb(228, 246, 253); */
     /* color: rgb(83, 134, 134); */
+    /* background-color: transparent; */
 }
